enabled bootstrap and jquery

--- a/main.html
+++ b/main.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>JS homework</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/lib/jquery-3.6.0.js"></script>
+    <script src="js/lib/jquery.loadTemplate.js"></script>
+    <script src="js/lib/bootstrap.bundle.js"></script>
+
 </head>
 <body>
 
@@ -20,8 +25,9 @@
 
     </script>
 <!--    TODO: завести бутстрап-->
+<!--    TODO: завести Jquery-->
 <!--    TODO: продумать макет -->
-<!--    TODO: мб какой-нить шаблонизатор -->
+<!--  -->
 
 </body>
 </html>
